--- a/index.html
+++ b/index.html
@@ -5,27 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f62cd2861.js" crossorigin="anonymous"></script>
     <title>Flash Tattoo</title>
 </head>
 
 <body>
     <header class="container-fluid d-flex flex-column">
-        <nav class="row-md-12 align-self-lg-start d-flex flex-row justify-content-lg-center justify-content-between align-items-center w-100 gap-5">
+        <nav
+            class="row-md-12 align-self-lg-start d-flex flex-row mt-3 justify-content-lg-center justify-content-end align-items-center w-100 gap-5">
             <a class="text-decoration-none text-white" href="">Home</a>
             <a class="text-decoration-none text-white" href="">Elementos</a>
-            <div class="d-flex flex-direction-column justify-content-center align-items-center mx-lg-5 gap-2 gap-sm-5">
-                <div class="d-flex flex-sm-column justify-content-center align-items-center">
-                    <h2 class="text-white">Flash</h2>
-                    <p class="text-white">Tatuagens</p>
-                </div>
-                <div class="d-flex flex-sm-column justify-content-center align-items-center">
-                    <h2 class="text-white">Tattoo</h2>
-                    <p class="text-white">• • • 1998 • • •</p>
-                </div>
-            </div>
             <a class="text-decoration-none text-white" href="">Galeria</a>
             <a class="text-decoration-none text-white" href="">Artistas</a>
             <div class="d-lg-none">
@@ -34,15 +28,22 @@
         </nav>
         <div class="row d-flex flex-direction-column h-100 justify-content-center align-self-center">
             <div class="col d-flex flex-column justify-content-center align-items-center">
-                <button class="btns w-sm-75 text-white border-0 rounded-4 p-3 mb-5">Agende Sua Tatuagem!</button>
-                <p class="text-white text-center w-75">A Flash Tatto é uma renomada empresa fundada por Bruno Cardoso em
-                    2005, que se destaca no mercado pela sua excelência no fornecimento de serviços relacionados à
-                    indústria de tatuagens temporárias e personalizadas. Com uma trajetória notável ao longo de quase
-                    duas décadas, a empresa consolidou sua posição como líder do setor, combinando criatividade,
-                    inovação e qualidade em todos os aspectos de seu empreendimento.</p>
+                <div
+                    class="d-flex flex-direction-column justify-content-center align-items-center mx-lg-5 gap-2 gap-sm-5">
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <h2 class="text-white titulo">Flash</h2>
+                        <p class="text-white">Tatuagens</p>
+                    </div>
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <h2 class="text-white titulo">Tattoo</h2>
+                        <p class="text-white">• • • 1998 • • •</p>
+                    </div>
+                </div>
+                <button class="btns w-sm-75 text-black rounded-4 px-3 py-2 mt-5"><span>Agende Sua Tatuagem!</span></button>
             </div>
         </div>
     </header>
+    <script src=""></script>
 </body>
 
 </html>
