--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="d-flex flex-column justify-content-center align-items-center div-menu">
             <a class="text-decoration-none text-white" href="">Home</a>
             <a class="text-decoration-none text-white" href="">Dicas</a>
-            <a class="text-decoration-none text-white" href="">Galeria</a>
+            <a class="text-decoration-none text-white" href="#galeria">Galeria</a>
             <a class="text-decoration-none text-white" href="#select">Artistas</a>
         </div>
     </div>
@@ -59,7 +59,7 @@
             class="row-md-12 align-self-lg-start d-flex flex-row mt-3 justify-content-lg-center justify-content-end align-items-center w-100 gap-5">
             <a class="text-decoration-none" href="">Home</a>
             <a class="text-decoration-none" href="">Dicas</a>
-            <a class="text-decoration-none" href="">Galeria</a>
+            <a class="text-decoration-none" href="#galeria">Galeria</a>
             <a class="text-decoration-none t
             " href="#select">Artistas</a>
             <div class="d-lg-none">
@@ -104,7 +104,7 @@
                 <img class="img-art rounded-3" src="assets/imgs/tattoos.png" style="width: 100%;" alt="">
             </div>
         </section>
-        <section class="row galeria mb-5">
+        <section class="row galeria mb-5" id="galeria">
             <div class="col">
                 <div class="row g-3 pb-3 altura">
                     <div class="col-md-12 div-select w-100 d-flex flex-column align-items-center justify-content-center">
