--- a/index.html
+++ b/index.html
@@ -129,10 +129,54 @@
                 </div>
             </div>
         </section>
-        <section class="row">
-
+        <section class="row sec-cards w-100">
+            <div class="titulo-benef w-100 d-flex justify-content-center">
+                <h4>Benefícios dos Nossos Serviços</h4>
+            </div>
+            <div class="cards-benef w-100 h-75 d-flex align-items-center">
+                <div class="cards cards-animados">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <i class="fa-solid fa-star" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p>Qualidade excepicional em todos nossos serviços, com tecnologias inovadoras.</p>
+                    </div>
+                </div>
+                <div class="cards cards-animados">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <i class="fa-solid fa-pen-nib" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p>Profissionais Experientes e muito bem treinados para o melhor resultadao possível.</p>
+                    </div>
+                </div>
+                <div class="cards cards-animados">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <i class="fa-solid fa-gauge-high" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p>Entrega de serviços rápida e eficiente, diferente de tudo que você já viu.</p>
+                    </div>
+                </div>
+                <div class="cards cards-animados">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <i class="fa-solid fa-shield-halved" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p>Segurança total na sua tatuagem, com os melhores métodos do mercado.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+    <footer class="footer">
+        <button onclick="contato()" class="border-0 rounded-3 bg-white p-2 btn-contato">Entrar em contato</button>
+        <div class="redes" style="right: -20%;">
+            <img src="assets/imgs/icons8-whatsapp-48.png" alt="">
+            <img src="assets/imgs/icons8-instagram-48.png" alt="">
+            <img src="assets/imgs/icons8-facebook-48.png" alt="">
+        </div>
+    </footer>
     <script src="assets/scripts/script.js"></script>
 </body>
 
