--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             </div>
         </section>
         <section class="row sec-cards w-100">
-            <div class="titulo-benef w-100 d-flex justify-content-center">
-                <h4>Benefícios dos Nossos Serviços</h4>
+            <div class="w-100 d-flex justify-content-center">
+                <h4 class="titulo-benef">Benefícios dos Nossos Serviços</h4>
             </div>
             <div class="cards-benef w-100 h-75 d-flex align-items-center">
                 <div class="cards cards-animados">
