--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="d-flex flex-column justify-content-center align-items-center div-menu">
             <a class="text-decoration-none text-white" href="">Home</a>
-            <a class="text-decoration-none text-white" href="">Dicas</a>
+            <a class="text-decoration-none text-white" href="#sec-cards">Dicas</a>
             <a class="text-decoration-none text-white" href="#galeria">Galeria</a>
             <a class="text-decoration-none text-white" href="#select">Artistas</a>
         </div>
@@ -58,7 +58,7 @@
         <nav
             class="row-md-12 align-self-lg-start d-flex flex-row mt-3 justify-content-lg-center justify-content-end align-items-center w-100 gap-5">
             <a class="text-decoration-none" href="">Home</a>
-            <a class="text-decoration-none" href="">Dicas</a>
+            <a class="text-decoration-none" href="#sec-cards">Dicas</a>
             <a class="text-decoration-none" href="#galeria">Galeria</a>
             <a class="text-decoration-none t
             " href="#select">Artistas</a>
@@ -129,41 +129,41 @@
                 </div>
             </div>
         </section>
-        <section class="row sec-cards w-100">
+        <section id="sec-cards" class="row w-100">
             <div class="w-100 d-flex justify-content-center">
-                <h4 class="titulo-benef">Benefícios dos Nossos Serviços</h4>
+                <h4 class="titulo-benef">Dicas para suas tatuagens</h4>
             </div>
             <div class="cards-benef w-100 h-75 d-flex align-items-center">
                 <div class="cards cards-animados">
                     <div class="d-flex justify-content-center align-items-center">
-                        <i class="fa-solid fa-star" style="color: #ffffff;"></i>
+                        <i class="fa-solid fa-pump-soap" style="color: #ffffff;"></i>
                     </div>
                     <div class="d-flex justify-content-center align-items-center">
-                        <p>Qualidade excepicional em todos nossos serviços, com tecnologias inovadoras.</p>
-                    </div>
-                </div>
-                <div class="cards cards-animados">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <i class="fa-solid fa-pen-nib" style="color: #ffffff;"></i>
-                    </div>
-                    <div class="d-flex justify-content-center align-items-center">
-                        <p>Profissionais Experientes e muito bem treinados para o melhor resultadao possível.</p>
+                        <p>Utilize cremes hidratantes para manter a tatuagem hidratada e evitar escamação.</p>
                     </div>
                 </div>
                 <div class="cards cards-animados">
                     <div class="d-flex justify-content-center align-items-center">
-                        <i class="fa-solid fa-gauge-high" style="color: #ffffff;"></i>
+                        <i class="fa-solid fa-user-tie" style="color: #ffffff;"></i>
                     </div>
                     <div class="d-flex justify-content-center align-items-center">
-                        <p>Entrega de serviços rápida e eficiente, diferente de tudo que você já viu.</p>
+                        <p>Procure profissionais experientes e bem treinados para o melhor resultadao possível.</p>
                     </div>
                 </div>
                 <div class="cards cards-animados">
                     <div class="d-flex justify-content-center align-items-center">
-                        <i class="fa-solid fa-shield-halved" style="color: #ffffff;"></i>
+                        <i class="fa-solid fa-stethoscope" style="color: #ffffff;"></i>
                     </div>
                     <div class="d-flex justify-content-center align-items-center">
-                        <p>Segurança total na sua tatuagem, com os melhores métodos do mercado.</p>
+                        <p>Consulte médicos para acompanhar a cicatrização da tatuagem.</p>
+                    </div>
+                </div>
+                <div class="cards cards-animados">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <i class="fa-solid fa-hands-bubbles" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <p>Higienize sua tatuagem, de 2 à 3 vezes ao dia para evitar infecções bacterianas.</p>
                     </div>
                 </div>
             </div>
