--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <i class="fa-solid fa-hands-bubbles" style="color: #ffffff;"></i>
                     </div>
                     <div class="d-flex justify-content-center align-items-center">
-                        <p>Higienize sua tatuagem, de 2 à 3 vezes ao dia para evitar infecções bacterianas.</p>
+                        <p>Lave sua tatuagem, de 2 à 3 vezes ao dia com sabonete antibacteriano para evitar infecções bacterianas.</p>
                     </div>
                 </div>
             </div>
